Optimizing for mobile devices

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 	<span class="pure-button pure-button-small mobile-menu-toggle"><i class="fa fa-bars"></i></span>
 	<ul class="mobile-menu-part">
 		{{#menu}}
-		<li><a href="{{link}}">{{name}}</a></li>
+		<li class="{{class}}"><a href="{{link}}">{{name}}</a></li>
 		{{/menu}}
 	</ul>
 	<ul class="user-login mobile-menu-part" id="user-login">
