--- a/public/templates.html
+++ b/public/templates.html
@@ -108,10 +108,10 @@
 		<span class="user-language js-language __en" role="action">en</span>
 		<span class="user-language js-language __ru" role="action">ru</span>
 	</li>
-    <li class="user-login_item">
+    <li class="user-login_item hide-from-mob">
         <span class="user-name"><i class="fa fa-user"></i> {{username}}</span>
     </li>
-    <li class="user-login_item">
+    <li class="user-login_item hide-from-mob">
         <a href="/logout" class="user-logout js-logout"><i class="fa fa-umbrella"></i> {{login}}</a>
     </li>
 </script>
