--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
 			</h1>
 			<!--<h2 class="banner-head sub-title">{{searchText}}</h2>-->
 			<form class="pure-form home-search">
-				<input type="text" class="pure-input js-search-input" placeholder="{{searchExample}}" tabindex="1" autofocus="autofocus">
+				<input type="text" class="pure-input js-search-input" placeholder="{{searchExample}}" tabindex="1">
 				<button type="submit" class="pure-button js-search-button"><i class="fa fa-search fa-lg"></i> {{searchBtn}}</button>
 			</form>
 		</div>
