--- a/public/templates.html
+++ b/public/templates.html
@@ -13,7 +13,7 @@
             <div class="content">
 				<div class="pure-form main-search">
 					<form>
-						<input type="text" class="pure-input js-search-input js-search-input-interactive" placeholder="{{placeholder}}..." tabindex="1" value="{{getParams}}" autofocus="autofocus" />
+						<input type="text" class="pure-input js-search-input js-search-input-interactive" placeholder="{{placeholder}}..." tabindex="1" value="{{getParams}}" />
 						<button type="submit" class="pure-button js-search-button"><i class="fa fa-search" title="{{button}}!"></i></button>
 					</form>
 				</div>
