--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="{{description}}">
 
+    <link rel="apple-touch-icon-precomposed" href="/build/favicons/favicon-152.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="/build/favicons/favicon-144.png">
+
 	<title>{{title}}</title>
 
 	<link rel="stylesheet" href="/build/css/all.min.css">
