--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="{{description}}">
 
     <link rel="apple-touch-icon-precomposed" href="/build/favicons/favicon-152.png">
-    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileColor" content="#95B490">
     <meta name="msapplication-TileImage" content="/build/favicons/favicon-144.png">
 
 	<title>{{title}}</title>
