--- a/public/templates.html
+++ b/public/templates.html
@@ -25,8 +25,9 @@
     </div>
 </script>
 
-<!--TODO: локализовать "by",  показать автора без ссылки-->
 <script type="text/x-jquery-tmpl" id="search-output">
+    <p class="posts_description">{{tagDescription}}</p>
+
     <h1 class="content-subhead">{{resultsLabel}} {{total}}</h1>
 
     <ul class="article-list">
