--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
 
 	<link rel="stylesheet" href="/build/css/all.min.css">
 
+	<!-- Temp moving data on head, till prerender.io service issues will be fixed -->
+	<script>var appData = {{{appData}}};</script>
+
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="/build/js/jquery-2.0.3.min.js"><\/script>')</script>
 	<script src="/build/js/all.min.js"></script>
@@ -254,11 +257,8 @@
 </div>
 
 
-
-<script type="text/javascript">var appData = {{{appData}}};</script>
-
 {{#production}}
-<script type="text/javascript">
+<script>
 	var _gauges = _gauges || [];
 	(function() {
 		var t   = document.createElement('script');
