Switching htmlcompressor to htmlmin

--- a/public/templates.html
+++ b/public/templates.html
@@ -1,4 +1,4 @@
-<script type="text/x-jquery-tmpl" id="search" title="Post list" data-url="search">
+<script type="text/template" id="search" title="Post list" data-url="search">
     <div class="pure-g-r" id="layout">
         <div class="sidebar pure-u">
             <header class="sidebar-header">
@@ -25,7 +25,7 @@
     </div>
 </script>
 
-<script type="text/x-jquery-tmpl" id="search-output">
+<script type="text/template" id="search-output">
     <p class="posts_description">{{tagDescription}}</p>
 
     <h1 class="content-subhead">{{resultsLabel}} {{total}}</h1>
@@ -94,7 +94,7 @@
     </ul>
 </script>
 
-<script type="text/x-jquery-tmpl" id="nav-panel">
+<script type="text/template" id="nav-panel">
     <ul class="nav-list tag-sidebar">
         {{#navList}}
         <li class="nav-item">
@@ -104,7 +104,7 @@
     </ul>
 </script>
 
-<script type="text/x-jquery-tmpl" id="menu-logined">
+<script type="text/template" id="menu-logined">
 	<li class="user-login_item">
 		<span class="user-language js-language __en" role="action">en</span>
 		<span class="user-language js-language __ru" role="action">ru</span>
@@ -117,7 +117,7 @@
     </li>
 </script>
 
-<script type="text/x-jquery-tmpl" id="menu-not-logined">
+<script type="text/template" id="menu-not-logined">
 	<li class="user-login_item">
 		<span class="user-language js-language __en" role="action">en</span>
 		<span class="user-language js-language __ru" role="action">ru</span>
@@ -127,7 +127,7 @@
     </li>
 </script>
 
-<script type="text/x-jquery-tmpl" id="about" data-url="about" title="About">
+<script type="text/template" id="about" data-url="about" title="About">
     <div class="content">
         <div class="pure-g-r content-ribbon">
             <div class="pure-u-2-3">
@@ -170,7 +170,7 @@
     </div>
 </script>
 
-<script type="text/x-jquery-tmpl" id="bookmarklet" data-url="bookmarklet" title="Bookmarklet">
+<script type="text/template" id="bookmarklet" data-url="bookmarklet" title="Bookmarklet">
     <div class="content">
 
 		<div class="l-box">
